Fix footer navBox overflow and non-centered text

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -117,7 +117,7 @@
     font-weight: 900;
     font-size: var(--maru-medium);
     text-transform: uppercase;
-    line-height: var(--baseline);
+    padding: var(--box-padding) 0;
     margin: 0;
   }
 
@@ -160,12 +160,11 @@
 .navBox {
   border-bottom: var(--border);
   flex: 0 0 50%;
-  white-space: nowrap;
   padding-left: var(--box-padding);
   display: flex;
   & ul {
-    padding-left: var(--box-padding);
-    flex: 0 0 33%;
+    padding-right: var(--box-padding);
+    flex: 0 0 33.333%;
   }
 }
 
